--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,7 @@
 }
 
 .container {
+  background: linear-gradient(to right bottom, #e1b382 #c89666);
   width: 100%;
   min-height: 100vh;
   display: flex;
@@ -11,3 +12,37 @@
   align-items: center;
   }
 
+  .app-wrapper{
+    background-color: #12343b;
+    min-width: 450px;
+    min-height: 650px;
+    padding: 30px;
+    box-sizing: border-box;
+    border-radius: 10px;
+    box-shadow: 3px 6px 40px #000;
+    margin-bottom: 10px;
+  }
+
+  .header h1 {
+    color: #fff;
+    text-align: center;
+    margin: 30px 0;
+  }
+
+  .task-input{
+    outline: none;
+    width: 260px;
+    padding: 15px;
+    margin-right: 25px;
+    font-size: 20px;
+    color: #ccc;
+    background-color: #000000;
+    border: 1px solid #c89666;
+    border-radius: 10px;
+  }
+
+  .button-add{
+    width: 70px;
+    padding: 15px 15px;
+    font-size: 20px;
+  }
