--- a/src/App.css
+++ b/src/App.css
@@ -58,3 +58,49 @@
     padding: 10px;
     max-height: 30px;
   }
+
+  .button-complete,
+  .button-delete,
+  .button-edit{
+    border: none;
+    outline: none;
+    cursor: pointer;
+    background-color: transparent;
+    font-size: 28px;
+    border-radius: 50%;
+  }
+
+.button-complete{
+  color: #ff6c6c;
+  margin-right: 10px;
+}
+
+.button-edit{
+  color: #e2d029;
+  margin-right: 10px;
+}
+.button-delete{
+  color: lightgreen;
+}
+
+.complete{
+  text-decoration-style: solid;
+  text-decoration-line: line-through;
+  text-decoration-color: #ff6c6c;
+  opacity: 0.6;
+}
+
+.list{
+  width:220px;
+  background-color: #12343b;
+  border: none;
+  color: #ccc;
+  font-size: 20px;
+  padding-left: 10px;
+  margin-right: 15px;
+}
+
+input:focus,
+button:focus {
+  outline: none;
+}
