--- a/src/App.css
+++ b/src/App.css
@@ -13,7 +13,7 @@
   }
 
   .app-wrapper{
-    background-color: #12343b;
+    background-color: #532a50;
     min-width: 450px;
     min-height: 650px;
     padding: 30px;
@@ -23,7 +23,7 @@
     margin-bottom: 10px;
   }
 
-  .header h1 {
+  .header h1, h3{
     color: #fff;
     text-align: center;
     margin: 30px 0;
@@ -35,9 +35,9 @@
     padding: 15px;
     margin-right: 25px;
     font-size: 20px;
-    color: #ccc;
-    background-color: #000000;
-    border: 1px solid #c89666;
+    color: rgb(255, 255, 255);
+    background-color: #b56876 ;
+    border: 1px solid #fdfdfd ;
     border-radius: 10px;
   }
 
@@ -47,13 +47,13 @@
     font-size: 20px;
     border-radius: 10px;
     border: 0;
-    background-color: #f1af71;
+    background-color: #b56876 ;
   }
 
   .list-item{
     display: flex;
     margin: 20px 0;
-    border: 1px solid #ccc;
+    border: 1px solid rgb(255, 255, 255);
     border-radius: 10px;
     padding: 10px;
     max-height: 30px;
@@ -92,7 +92,7 @@
 
 .list{
   width:220px;
-  background-color: #12343b;
+  background-color: #532a50;
   border: none;
   color: #ccc;
   font-size: 20px;
